# simple-singleton_chain-of-responsibility

./: README.md
Shape_project_factory/: CMakeLists.txt  main.cc
Shape_project_factory/Shapes/: Circle.cc  Circle.h  Rectangle.cc  Rectangle.h  Shape.cc  Shape.h  Triangle.cc  Triangle.h
Singleton_n_CoResponsibility/: CMakeLists.txt
Singleton_n_CoResponsibility/presenter/: Singleton.h  main.cc  main.h
Singleton_n_CoResponsibility/presenter/Shapes/: Rectangle.cc  Shape.h  Triangle.h
presenter/: CMakeLists.txt  Singleton.cc  Singleton.h  main.cc
presenter/Shapes/: Circle.cc  Circle.h  Rectangle.cc  Rectangle.h  Shape.cc  Shape.h  Triangle.cc  Triangle.h
